--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "dot.vim/bundle/nerdcommenter"]
 	path = dot.vim/bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
+[submodule "dot.vim/bundle/command-t"]
+	path = dot.vim/bundle/command-t
+	url = git://git.wincent.com/command-t.git
